# SpaceATracker

./: .gitignore  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/api/: pyproject.toml
backend/core/: pyproject.toml
backend/core/core/enums/: __init__.py  document.py  location.py  seats.py
backend/core/core/models/: __init__.py  flight.py  location.py  terminal_document.py
backend/core/core/schemas/: __init__.py  exceptions.py  extraction.py  flight.py  location.py  terminal_document.py
backend/scraper/: README.md  gather_assets.py  pyproject.toml
backend/scraper/scraper/: main.py
backend/scraper/scraper/core/: config.py  db.py  http_client.py
backend/scraper/scraper/discovery/: client.py  parser.py  service.py
backend/scraper/scraper/extraction/: chain.py  client.py  service.py
backend/scraper/scraper/extraction/strategies/: amc_image_link.py  amc_text_link.py  base.py  facebook.py  standard.py
backend/scraper/scraper/ocr/: __init__.py  client.py  pipeline.py  prompt.py  service.py
backend/scraper/scraper/storage/: s3.py
backend/scraper/tests/discovery/: test_parser.py
backend/scraper/tests/discovery/assets/default_layout/: main_directory.html  main_directory_terminals.csv
backend/scraper/tests/extraction/: test_extraction_chain.py  test_extraction_service.py  test_ocr_integration.py
backend/scraper/tests/extraction/assets/: terminal_docs_blank.csv
backend/scraper/tests/extraction/assets/05032026/: al-udeid-terminal_05032026.html  altus-afb-ok_05032026.html  andersen-afb-guam_05032026.html  aviano-ab-italy_05032026.html  baltimore-washington-int'l-(bwi)-md_05032026.html  bangor-angb-me_05032026.html  barksdale-afb-la_05032026.html  bradley-airport-ct_05032026.html  cannon-afb-nm_05032026.html  charlotte-angb-nc_05032026.html  davis-monthan-afb-az_05032026.html  diego-garcia-uk_05032026.html  dover-afb-de_05032026.html  eglin-afb-fl_05032026.html  eielson-afb-ak_05032026.html  ellsworth-afb-sd_05032026.html  fairchild-afb-wa_05032026.html  forbes-field-angb-topeka-ks_05032026.html  great-falls-mt_05032026.html  grissom-arb-in_05032026.html  hanscom-afb-ma_05032026.html  hill-afb-ut_05032026.html  holloman-afb-nm_05032026.html  incirlik-ab-turkey_05032026.html  iowa-ang-sioux-city-ia_05032026.html  jb-elmendorf-richardson-ak_05032026.html  jb-langley-eustis-va_05032026.html  jb-pearl-harbor-hickam-hi_05032026.html  jb-san-antonio-lackland-tx_05032026.html  joint-base-andrews-md_05032026.html  joint-base-charleston-sc_05032026.html  joint-base-lewis-mcchord-wa_05032026.html  joint-base-mcguire-dix-lakehurst-nj_05032026.html  kadena-ab-japan_05032026.html  keesler-afb-ms_05032026.html  kirtland-afb-nm_05032026.html  kunsan-ab-rok_05032026.html  kuwait-cargo-city-gateway-terminal_05032026.html  lajes-field-ab-portugal_05032026.html  (+53 more)
backend/scraper/tests/ocr/: test_schemas.py  test_service.py
conductor/: product.md  (+3 more)
(+7 files in other folders)
