[project]
name = "scraper"
version = "0.1.0"
description = "SpaceATracker Background Scraper Worker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.12",
    "asyncpg>=0.31.0",
    "core",
    "greenlet>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "selectolax>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

